--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
   <title>Awesome Books</title>
 </head>
 <body>
-  <h1>Awesome books</h1>
+  <h1>All awesome books</h1>
   <section id="addBook"></section>
   
+  <h2>Add a new book</h2>
   <form id="form">
     <input type="text" name="title" id="title" placeholder="Title" autocomplete="off">
     <input type="text" name="author" id="author" placeholder="Author" autocomplete="off">
